--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div id="controls-id" class="controls">
-            <p class="controls__p">Total: $<span id="total"></span></p>
+            <p class="controls__p">Total: <span id="total"></span></p>
             <p class="controls__p">Cantidad: <span id="finalQuantity" style="padding-left: .3rem;"></span></p>
             <p class="controls__p">Color: <span id="chooseColor" class="colorClass"></span></p>
         </div>
